# nitro-cpp-test

./: .gitignore  CMakeLists.txt  README.md
include/: Intersection.h  OutputFormatter.h  Rect.h  RectangleOperator.h  helpers.h
src/: Intersection.cpp  OutputFormatter.cpp  Rect.cpp  RectangleOperator.cpp  main.cpp
tests/: test-intersection.cpp  test-main.cpp  test-output-formatter.cpp  test-rect.cpp  test-rectangle-operator.cpp  test.h  test_sample1.json  test_sample3.json
